new research position

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<section style="padding-left:64px;"class="spotlight style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
                         <img style="display:block;margin-top:auto;margin-bottom:auto"src="images/profile-light.png" width="145" height="150" alt="" />
                         <div style="padding-top:50px;padding-bottom:0px;padding-left:15px;margin-left:15px;"class="content">
-							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;"></h2></h1>
+							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;">Ph.D.</h2></h1>
 							<p style="margin-bottom:10px"class="major">translational informatics, clinical interoperability, clinical decision support</p>
 							<ul class="actions">
                                 <li><a href="Watkins_CV.pdf" class="button small">PDF</a></li>
@@ -76,7 +76,7 @@
 							<h2>Education</h2>
                             <header>
                                 <h3 style="margin-bottom:6px">Ph.D., Biomedical Informatics, University of Utah</h3>
-                                <p style="margin-bottom:9px">2017-present</p>
+                                <p style="margin-bottom:9px">2017-2021</p>
                             </header>
                             Dissertation: Addressing Barriers to the Practical Utility of Genomic Data in the Clinical Setting
                             <br />Aims:<ol style="margin:0">
@@ -95,9 +95,14 @@
                     <section id="research-positions" class="spotlight style1 orient-left content-align-left ">
 						<div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
                             <h2>Research Positions</h2>
+														<header>
+                                <h3 style="margin-bottom:6px">Postdoctoral Scholar, <i>Pediatric Cancer Data Commons</i>, Department of Pediatrics, University of Chicago</h3>
+                                <p style="margin-bottom:9px">2021-present</p>
+                            </header>
+                            The department supports seven pre-doctoral researchers through a training grant from the National Library of Medicine. With my appointment, I expanded my research efforts to include SMART on FHIR, CDS Hooks, CQL, HL7 Infobutton, Social Determinants of Health, and HL7 FHIR Genomics Reporting.
                             <header>
                                 <h3 style="margin-bottom:6px">NLM Trainee, Department of Biomedical Informatics, University of Utah</h3>
-                                <p style="margin-bottom:9px">2018-present</p>
+                                <p style="margin-bottom:9px">2018-2021</p>
                             </header>
                             The department supports seven pre-doctoral researchers through a training grant from the National Library of Medicine. With my appointment, I expanded my research efforts to include SMART on FHIR, CDS Hooks, CQL, HL7 Infobutton, Social Determinants of Health, and HL7 FHIR Genomics Reporting.
                             <header style="padding-top:30px">
@@ -387,7 +392,7 @@
                             <ul class="actions stacked align-center">
                                 <li><a href="#" class="button big wide">Return to Top</a></li>
                             </ul>
-                            <i>last updated: 04/27/21</i>
+                            <i>last updated: 09/27/21</i>
 							<!--ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
