--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<section style="padding-left:64px;"class="spotlight style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
                         <img style="display:block;margin-top:auto;margin-bottom:auto"src="images/profile-light.png" width="145" height="150" alt="" />
                         <div style="padding-top:50px;padding-bottom:0px;padding-left:15px;margin-left:15px;"class="content">
-							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;">Ph.D.</h2></h1>
+							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;">, Ph.D.</h2></h1>
 							<p style="margin-bottom:10px"class="major">translational informatics, clinical interoperability, clinical decision support</p>
 							<ul class="actions">
                                 <li><a href="Watkins_CV.pdf" class="button small">PDF</a></li>
@@ -99,8 +99,8 @@
                                 <h3 style="margin-bottom:6px">Postdoctoral Scholar, <i>Pediatric Cancer Data Commons</i>, Department of Pediatrics, University of Chicago</h3>
                                 <p style="margin-bottom:9px">2021-present</p>
                             </header>
-                            The department supports seven pre-doctoral researchers through a training grant from the National Library of Medicine. With my appointment, I expanded my research efforts to include SMART on FHIR, CDS Hooks, CQL, HL7 Infobutton, Social Determinants of Health, and HL7 FHIR Genomics Reporting.
-                            <header>
+                            Harmonizing several collections of pediatric cancer data (clinical, genomic, etc.) from national and international partners with the goal of maximizing the utility of the data and enhancing proper enrollment of clinical trials.
+                            <header style="padding-top:30px">
                                 <h3 style="margin-bottom:6px">NLM Trainee, Department of Biomedical Informatics, University of Utah</h3>
                                 <p style="margin-bottom:9px">2018-2021</p>
                             </header>
