--- a/index.html
+++ b/index.html
@@ -355,14 +355,11 @@
                             <h2 style="margin-bottom:9px">Publications</h2>
                             <ol>
                                 <li>
-                                     <b>Watkins M</b>, Kohlmann W, Berry T, Santuci K, Koptiuch C, Rynearson S, Eilbeck K. 'LocalVar: a local variant collection manger to asynchronously detect synonyms, HGVS expression changes, and variant interpretation changes from ClinVar', Manuscript in preparation.
-                                </li>
-                                <li>
                                      <b>Watkins M</b>, Rasmussen L, Williams M, Walton N, Johnson D, Overby Taylor C, Freimuth B, Connolly J, Heale B, Nielsen K, Del Fiol G. 'Classification of clinical genomic information needs with a taxonomy of clinical questions', Manuscript in preparation.
                                 </li>
                                 <li>
-                                    <b>Watkins M</b>, Au A, Vuong T, Wallis H, Hart K, Rohrwasser A, Eilbeck K. 'ResultsMyWay: combining FHIR, Clinical Quality Language (CQL), and informational resources to create a newborn screening application', AMIA 2021 Virtual Informatics Summit, Virtual Conference, 22-25 March 2021.
-                                </li>
+																		<b>Watkins M</b>, Au A, Vuong T, Wallis H, Hart K, Rohrwasser A, Eilbeck K. 'ResultsMyWay: combining FHIR, Clinical Quality Language (CQL), and informational resources to create a newborn screening application’, AMIA Annu Symp Proc. 2021; 2021:615–623.
+																		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8378617"><i>PMC8378617</i></a></li>
                                 <li>
                                     Silva-Valencia J, Escobar-Agreda S, Viernes B, <b>Watkins M</b>, Rojas-Mezarina L, Nguyen V, Espinoza- Herrera H, Borbolla D. 'Documentation of Social Determinants of Health in Healthcare Organizations in Perú: A field study to inform the development of a FHIR app', AMIA 2020 Annual Symposium, Virtual Conference, 14-18 November 2020.
                                 </li>
@@ -392,7 +389,7 @@
                             <ul class="actions stacked align-center">
                                 <li><a href="#" class="button big wide">Return to Top</a></li>
                             </ul>
-                            <i>last updated: 09/27/21</i>
+                            <i>last updated: 08/31/21</i>
 							<!--ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
