add fhir app competition

--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
                     <section id="editorial" class="spotlight style1 orient-left content-align-left ">
 						<div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
                             <h2 style="margin-bottom:30px">Editorial Experience</h2>
+														<header>
+                                <p style="margin-bottom:0">Reviewer</p>
+                            </header>
+                            2021, AMIA/HL7 FHIR App Competition
                             <header>
                                 <p style="margin-bottom:0">Ad-hoc Reviewer</p>
                             </header>
