--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 				<!-- One -->
 					<section style="padding-left:64px;"class="spotlight style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
-                        <img style="display:block;margin-top:auto;margin-bottom:auto"src="images/profile-light.jpg" width="145" height="150" alt="" />
+                        <img style="display:block;margin-top:auto;margin-bottom:auto"src="images/profile-light.png" width="145" height="150" alt="" />
                         <div style="padding-top:50px;padding-bottom:0px;padding-left:15px;margin-left:15px;"class="content">
 							<h1 style="display:inline;">Michael Watkins<h2 style="display:inline;">, Ph.D.</h2></h1>
 							<p style="margin-bottom:10px"class="major">translational informatics, clinical interoperability, clinical decision support</p>
