--- a/index.html
+++ b/index.html
@@ -361,26 +361,29 @@
                                 <li>
                                      <b>Watkins M</b>, Rasmussen L, Williams M, Walton N, Johnson D, Overby Taylor C, Freimuth B, Connolly J, Heale B, Nielsen K, Del Fiol G. 'Classification of clinical genomic information needs with a taxonomy of clinical questions', Manuscript in preparation.
                                 </li>
-                                <li>
-																		<b>Watkins M</b>, Au A, Vuong T, Wallis H, Hart K, Rohrwasser A, Eilbeck K. 'ResultsMyWay: combining FHIR, Clinical Quality Language (CQL), and informational resources to create a newborn screening application’, AMIA Annu Symp Proc. 2021; 2021:615–623.
-																		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8378617"><i>PMC8378617</i></a></li>
-                                <li>
-                                    Silva-Valencia J, Escobar-Agreda S, Viernes B, <b>Watkins M</b>, Rojas-Mezarina L, Nguyen V, Espinoza- Herrera H, Borbolla D. 'Documentation of Social Determinants of Health in Healthcare Organizations in Perú: A field study to inform the development of a FHIR app', AMIA 2020 Annual Symposium, Virtual Conference, 14-18 November 2020.
+																<li>
+                                     <b>Watkins M</b>, Au A, Eilbeck K, Ruiz-Schultz N, Rohrwasser A, Hart K, Williams M. (2022) 'A comprehansive newborn screening data interface for Utah providers, parents, and guardians' [poster] <i>APHL</i>.
                                 </li>
                                 <li>
-                                    <b>Watkins M</b>, Viernes B, Nguyen V, Rojas Mezarina L, Silva Valencia J, Borbolla D. 'Translating social determinants of health into standardized clinical entities', <i>Stud Health Technol Inform.</i> 2020 Jun 16;270:474-478. doi: 10.3233/SHTI200205.
+																		<b>Watkins M</b>, Au A, Vuong T, Wallis H, Hart K, Rohrwasser A, Eilbeck K. (2021) 'ResultsMyWay: combining FHIR, Clinical Quality Language (CQL), and informational resources to create a newborn screening application’, <i>AMIA Annu Symp Proc.</i> ; 2021:615–623.
+																		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8378617"><i>PMC8378617</i></a></li>
+                                <li>
+                                    Silva-Valencia J, Escobar-Agreda S, Viernes B, <b>Watkins M</b>, Rojas-Mezarina L, Nguyen V, Espinoza- Herrera H, Borbolla D. (2020) 'Documentation of Social Determinants of Health in Healthcare Organizations in Perú: A field study to inform the development of a FHIR app', <i>AMIA</i>.
+                                </li>
+                                <li>
+                                    <b>Watkins M</b>, Viernes B, Nguyen V, Rojas Mezarina L, Silva Valencia J, Borbolla D. (2020) 'Translating social determinants of health into standardized clinical entities', <i>Stud Health Technol Inform.</i> 70:474-478. doi: 10.3233/SHTI200205.
                                      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8083881"><i>PMC8083881</i></a>
                                 </li>
                                 <li>
-                                    <b>Watkins M</b>, Eilbeck K. 'FHIR Lab Reports: using SMART on FHIR and CDS Hooks to increase the clinical utility of pharmacogenomic laboratory test results', <i>AMIA Jt Summits Transl Sci Proc.</i> 2020 May 30;2020:683-692.
+                                    <b>Watkins M</b>, Eilbeck K. (2020) 'FHIR Lab Reports: using SMART on FHIR and CDS Hooks to increase the clinical utility of pharmacogenomic laboratory test results', <i>AMIA Jt Summits Transl Sci Proc.</i> 2020:683-692.
                                      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7233102/"><i>PMC7233102</i></a>
                                 </li>
                                 <li>
-                                    <b>Watkins M</b>, Rynearson S, Henrie A, Eilbeck K. 'Implementing the VMC specification to reduce ambiguity in genomic variant representation', <i>AMIA Annu Symp Proc.</i> 2020 Mar 4;2019:1226-1235.
+                                    <b>Watkins M</b>, Rynearson S, Henrie A, Eilbeck K. (2019) 'Implementing the VMC specification to reduce ambiguity in genomic variant representation', <i>AMIA Annu Symp Proc.</i> 2019:1226-1235.
                                      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7153148/"><i>PMC7153148</i></a>
                                 </li>
                                 <li>
-                                    <b>Watkins M</b>, Fujimoto MS, Clement M. 'A Simplified Framework for Neural Networks', Biotechnology and Bioinformatics Symposium, Provo, Utah, 8-9 December 2016.
+                                    <b>Watkins M</b>, Fujimoto MS, Clement M. (2016) 'A Simplified Framework for Neural Networks' [poster] <i>BIOT</i>.
                                 </li>
                             </ol>
                         </div>
