--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
                     <section id="publications" class="spotlight style1 orient-left content-align-left ">
 						<div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
-                            <h2 style="margin-bottom:9px">Presentations and Publications</h2>
+                            <h2 style="margin-bottom:9px">Publications</h2>
                             <ol>
                                 <li>
                                      <b>Watkins M</b>, Rasmussen L, Williams M, Walton N, Johnson D, Overby Taylor C, Freimuth B, Connolly J, Heale B, Nielsen K, Del Fiol G. (2021) Classification of clinical genomic information needs with a taxonomy of clinical questions. Manuscript in preparation.
