--- a/index.html
+++ b/index.html
@@ -79,12 +79,8 @@
                                 <p style="margin-bottom:9px">2017-2021</p>
                             </header>
                             Dissertation: Addressing Barriers to the Practical Utility of Genomic Data in the Clinical Setting
-                            <br />Aims:<ol style="margin:0">
-                                    <li>Working toward comprehensive knowledge retrieval and globally unique representation for instances of biological sequence variation (HGVS, ClinVar, GA4GH VRS)</li>
-                                    <li>Harnessing clinical interoperability and decision support standards to integrate computable genomic data artifacts into the EHR (HL7 FHIR Genomics Reporting, SMART on FHIR, CDS Hooks, CQL)</li>
-                                    <li>Clinical genomic information needs</li>
-                                </ol>
-                            Dissertation Advisors: Karen Eilbeck (Chair), Ph.D.; Guilherme Del Fiol, M.D., Ph.D.; Scott Narus, Ph.D., M.S.; Rong Mao, M.D., FACMG; Wendy Kohlmann, M.S.
+                            <br />Concentrations: clinical genomics, variant representation, interoperable EHR app development
+														<br />Dissertation Advisors: Karen Eilbeck (Chair), Ph.D.; Guilherme Del Fiol, M.D., Ph.D.; Scott Narus, Ph.D., M.S.; Rong Mao, M.D., FACMG; Wendy Kohlmann, M.S.
                             <header style="padding-top:30px">
                                 <h3 style="margin-bottom:6px">B.S., Bioinformatics, Brigham Young University</h3>
                                 <p style="margin-bottom:9px">2011-2012, 2014-2017</p>
@@ -99,8 +95,8 @@
                                 <h3 style="margin-bottom:6px">Postdoctoral Scholar, <i>Pediatric Cancer Data Commons</i>, Department of Pediatrics, University of Chicago</h3>
                                 <p style="margin-bottom:9px">2021-present</p>
                             </header>
-                            Harmonizing several collections of pediatric cancer data (clinical, genomic, etc.) from national and international partners with the goal of maximizing the utility of the data and enhancing proper enrollment of clinical trials.
-                            <header style="padding-top:30px">
+														Harmonizing several collections of pediatric cancer data (clinical, genomic, etc.) from national and international partners with the goal of maximizing the utility of the data and enhancing effective pediatric cancer research, cohort discovery, and proper enrollment in clinical trials.
+														<header style="padding-top:30px">
                                 <h3 style="margin-bottom:6px">NLM Trainee, Department of Biomedical Informatics, University of Utah</h3>
                                 <p style="margin-bottom:9px">2018-2021</p>
                             </header>
@@ -136,7 +132,7 @@
                             <header>
                                 <p style="margin-bottom:0">Back-End Programming</p>
                             </header>
-                            Python, JavaScript, C++, Java, SQL/SQLite
+                            Python, JavaScript, C++, Java, SQL/SQLite, GraphQL
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Front-End Programming</p>
                             </header>
@@ -149,6 +145,7 @@
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Data Standards and Terminologies</p>
                             </header>
                             HL7 FHIR, HL7 V2, SNOMED-CT, RxNorm, LOINC, ICD-9/ICD-10
+														<br><a href="https://badgelist.com/HL7/HL7-FHIR-Proficient/u/mwatkin8/certificate"><img src="images/mini-fhir.png" width="60%"></a>
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Informatics</p>
                             </header>
@@ -279,7 +276,7 @@
                             </header>
                             2021, AMIA/HL7 FHIR App Competition
                             <header>
-                                <p style="margin-bottom:0">Ad-hoc Reviewer</p>
+                                <p style="margin-bottom:0;padding-top:15px;">Ad-hoc Reviewer</p>
                             </header>
                             2021, American Medical Informatics Association Annual Symposium
                             <br />2020, BMC Med Informatics Dec Making
@@ -393,7 +390,7 @@
                             <ul class="actions stacked align-center">
                                 <li><a href="#" class="button big wide">Return to Top</a></li>
                             </ul>
-                            <i>last updated: 08/31/21</i>
+                            <i>last updated: 11/02/21</i>
 							<!--ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
