add certifications section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                             <br /><a href="#research-positions">Research Positions</a>
                             <br /><a href="#honors">Honors</a>
                             <br /><a href="#skills">Skills/Interests</a>
+														<br /><a href="#badge-gallery">Certifications</a>
                             <br /><a href="#app-gallery">App Gallery</a>
                             <br /><a href="#invited-presentations">Invited Presentations</a>
                             <br /><a href="#memberships">Memberships</a>
@@ -145,7 +146,6 @@
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Data Standards and Terminologies</p>
                             </header>
                             HL7 FHIR, HL7 V2, SNOMED-CT, RxNorm, LOINC, ICD-9/ICD-10
-														<br><a href="https://badgelist.com/HL7/HL7-FHIR-Proficient/u/mwatkin8/certificate"><img src="images/mini-fhir.png" width="60%"></a>
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Informatics</p>
                             </header>
@@ -163,6 +163,22 @@
                             </header>
                             Amateur cellist, member of The Church of Jesus Christ of Latter-day Saints
                         </div>
+                    </section>
+
+										<section id="badge-gallery" style="padding-bottom:60px" class="wrapper style1">
+                        <div style="padding-top:30px;margin-left:50px;padding-bottom:20px"class="inner">
+                            <h2 style="margin-bottom:0;">Certifications</h2>
+                        </div>
+
+                        <!-- Gallery -->
+                            <div class="gallery style2 big lightbox">
+                                <article>
+                                    <a href="https://badgelist.com/HL7/HL7-FHIR-Proficient/u/mwatkin8/certificate" target="_blank" class="image">
+                                        <img src="images/mini-fhir.png" alt="" />
+                                    </a>
+                                </article>
+                            </div>
+
                     </section>
 
                     <section id="app-gallery" style="padding-bottom:60px" class="wrapper style1">
