modify membership dates

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <section id="memberships" class="spotlight style1 orient-left content-align-left ">
 						<div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
                             <h2 style="margin-bottom:9px">Professional and Scientific Society Memberships</h2>
-                            2018-present, American Medical Informatics Association
+                            2018-2021, American Medical Informatics Association
                         </div>
 					</section>
 
@@ -303,8 +303,8 @@
                     <section id="working-groups" class="spotlight style1 orient-left content-align-left ">
 						<div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
                             <h2 style="margin-bottom:9px">Working Groups</h2>
-                            2019-present, AMIA Genomics and Translational Bioinformatics working group
-                            <br />2018-present, HL7 FHIR Genomics Reporting working group
+                            2019-2021, AMIA Genomics and Translational Bioinformatics working group
+                            <br />2018-2021, HL7 FHIR Genomics Reporting working group
                             <br />2018-2020, Lead Investigator, eMERGE EHRI working group
                             <br />2017-2020, GA4GH Variant Representation working group
                         </div>
