modify membership dates

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Data Standards and Terminologies</p>
                             </header>
-                            HL7 FHIR, HL7 V2, SNOMED-CT, RxNorm, LOINC, ICD-9/ICD-10
+                            HL7 FHIR, FSH, HL7 V2, SNOMED-CT, RxNorm, LOINC, ICD-9/ICD-10
                             <header>
                                 <p style="margin-bottom:0;padding-top:15px">Clinical Informatics</p>
                             </header>
