--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 														<br>Highlighted experience includes:
 														<ul style="margin-bottom:0px">
 															<li>Helped secure funding through several notable mechanisms and partners, such as: LLS, NCI, St. Baldrick's, Rally Foundation, Team Bright Side, US Department of the Interior, and others.</li>
-															<li>Contracted federal work to develop a core model for pediatric cancer to be used for the NCI's Childhood Cancer Data Initiative (CCDI) and the Biden Cancer Moonshot Initiative</li>
+															<li>Contracted federal work to develop a core model for pediatric cancer to be used by the NCI's Childhood Cancer Data Initiative (CCDI) and the Biden Cancer Moonshot Initiative</li>
 															<li>Worked closely with the NCI EVS to enhance use of standardization and use of CDEs in the cancer data standards registry (caDSR)</li>
 															<li>Managed a team of clinical data analysts and created a version-controlled metadata change management pipeline</li>
 														</ul>
