--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 				<!-- One -->
 					<section style="padding-left:64px;"class="spotlight style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
-                        <img class="too-small" style="max-width: 100%;display:block;margin-top:auto;margin-bottom:auto"src="images/profile-round.png" width="145" height="145" alt="" />
-                        <div style="padding-top:50px;padding-bottom:0px;padding-left:15px;margin-left:15px;"class="content">
+                        <img class="too-small" style="max-width: 100%;display:block;margin-top:auto;margin-bottom:auto;margin-right:40px"src="images/profile-round.png" width="145" height="145" alt="" />
+                        <div style="padding-top:50px;padding-bottom:0px;padding-left:0px;"class="content">
 							<h1 style="display:inline; letter-spacing: normal;font-family: 'EB Garamond';">Michael Watkins<h2 style="display:inline;letter-spacing: normal;font-family: 'EB Garamond';">, PhD</h2></h1>
 							<p style="margin-bottom:10px"class="major">Translational informatics, clinical interoperability, semantic engineering</p>
 							<ul class="actions">
                                 <!--li><a href="Watkins_CV.pdf" class="button small">PDF</a></li-->
-								<li><a id="toggleButton" onclick="toggleInterests()" class="button small">Read More</a></li>
+								<li><a id="toggleButton" onclick="toggleInterests()" class="button small too-small">Read More</a></li>
 							</ul>
 						</div>
                         <a style="position: fixed;z-index:100;"onclick="openNav()" class="button small white-hover too-small">&#9776; Jump to...</a>
