--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <section>
                                 <span class="icon solid style2 major fa-network-wired"></span>
                                 <h3>Semantic Engineering</h3>
-                                <p>Knowledge resources play an increasingly critical role as more and more previously disparate electronic systems must now communicate and exchange information. Anyone who has been required to map from data source to data target can attest that manual approaches are not sustainable. To fully utilize the promise of interoperability and true machine learning, our biomedical knowledge sources need a semantic overhaul. Concepts that have enabled our modern way of life&mdash;linked data, knowledge graphs, semantic reasoning&mdash;must enter the health domain.</p>
+                                <p>Knowledge resources play an increasingly critical role as more and more previously disparate electronic systems must now communicate and exchange information. Anyone who has been required to map from data source to data target can attest that manual approaches are not sustainable. To fully utilize the promise of interoperability and true machine learning, our biomedical knowledge sources need a semantic overhaul. Concepts that have enabled our modern way of life&mdash;linked data, semantic reasoning&mdash;must mature in the health domain.</p>
                             </section>
                         </div>
                     </section>
