--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section style="padding-left:64px;"class="spotlight style1 orient-left content-align-left image-position-right fullscreen onload-content-fade-right">
-                        <img class="too-small" style="max-width: 100%;display:block;margin-top:auto;margin-bottom:auto;margin-right:40px"src="images/profile-round.png" width="145" height="145" alt="" />
-                        <div style="padding-top:50px;padding-bottom:0px;padding-left:0px;"class="content">
+					<section class="content spotlight style1 orient-left content-align-left fullscreen onload-content-fade-right">
+                        <img class="too-small" style="max-width: 100%;display:block;margin-top:auto;margin-bottom:auto;margin-left:7%;margin-right:40px"src="images/profile-round.png" width="145" height="145" alt="" />
+                        <div style="padding-top:50px;padding-bottom:0px;padding-left:0px;margin-left:0px"class="content">
 							<h1 style="display:inline; letter-spacing: normal;font-family: 'EB Garamond';">Michael Watkins<h2 style="display:inline;letter-spacing: normal;font-family: 'EB Garamond';">, PhD</h2></h1>
 							<p style="margin-bottom:10px"class="major">Translational informatics, clinical interoperability, semantic engineering</p>
 							<ul class="actions">
