--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
 																		 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10785885/"><i>PMC10785885</i></a>
 																</li>
 																<li>
-																		<b>Watkins M</b>, Au A, Vuong T, Wallis H, Hart K, Rohrwasser A, Eilbeck K. (2021) ResultsMyWay: combining FHIR, Clinical Quality Language (CQL), and informational resources to create a newborn screening application. <i>AMIA Annu Symp Proc.</i> ; 2021:615–623.
-																		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8378617"><i>PMC8378617</i></a>
+																		<b>Watkins M</b>, Kohlmann W, Berry T, Sama N, Koptiuch C, Rynearson S, Eilbeck K. (2023) LocalVar: a local variant collection manager to asynchronously detect synonyms, HGVS expression changes, and variant interpretation changes from ClinVar. <i>AMIA Annu Symp Proc.</i> ; 2023:1145-1152.
+																		<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10148312"><i>PMC10148312</i></a>
 																</li>
 																<li>
 																		[Poster] <b>Watkins M</b>, Furner B, Li M, Cohen E, Carlson B, Leary S, Hettmer S, Kamihara J, Wyatt K, Volchenboum S. (2022) Harmonizing Genetic Data Element Modeling Across Cancer Trials. 54th Congress of the International Society of Paediatric Oncology (SIOP).
