--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 																		Furner B, Cheng A, Desai A, Benedetti D, Friedman D, Wyatt K, <b>Watkins M</b>, Volchenboum S, Cohn S. (2024) Extracting Electronic Health Record Neuroblastoma Treatment Data with High Fidelity Using the REDCap Clinical Data Interoperability Services Module. <i>JCO Clinical Cancer Informatics</i>. Submitted Jan 2024.
 																</li>
 																<li>
-																		Wyatt K, Birz S, Castellino S, Henderson T, Lucas J, Pei Q, Zhou Y, Volchenboum S, Furner B, <b>Watkins M</b>, Kelly K, Flerlage J. (2024) Accelerating pediatric Hodgkin lymphoma research: the Hodgkin lymphoma data collaboration (NODAL). <i>Journal of the National Cancer Institute</i>. Accepted Jan 2024.
+																		Wyatt K, Birz S, Castellino S, Henderson T, Lucas J, Pei Q, Zhou Y, Volchenboum S, Furner B, <b>Watkins M</b>, Kelly K, Flerlage J. (2024) Accelerating pediatric Hodgkin lymphoma research: the Hodgkin lymphoma data collaboration (NODAL). <i>Journal of the National Cancer Institute</i>. 2024;, djae013, <a href= "2024;, djae013, https://doi.org/10.1093/jnci/djae013">https://doi.org/10.1093/jnci/djae013</a>
 																</li>
 																<li>
 																		 Carlson B, <b>Watkins M</b>, Li M, Furner B, Cohen E, Volchenboum S. (2023) Using A Standardized Nomenclature to Semantically Map Oncology-Related Concepts from Common Data Models to a Pediatric Cancer Data Model. <i>AMIA Annu Symp Proc.</i> ; 2023: 874–883
