--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                                 <p style="margin-bottom:9px">2021&ndash;present</p>
                             </header>
 														The mission of <a href="https://commons.cri.uchicago.edu/">Data for the Common Good (D4CG)</a> is to connect and share useful, high-quality data between institutions, groups, and countries. The Pediatric Cancer Data Commons&mdash;our flagship project&mdash;is the largest collection of harmonized international pediatric cancer data in the world. As the head of data modeling, I lead a team that works with a variety of international clinical professionals (oncologists, pathologists, surgeons, statisticians, terminologists, etc.) with the goal of a consensus data model that appropriately represents and harmonizes both trial registry and EHR data from all contributors.
-														<br>Highlighted experience includes:
+														<br>Highlighted experiences include:
 														<ul style="margin-bottom:0px">
-															<li>Helped secure funding through several notable mechanisms and partners, such as: LLS, NCI, St. Baldrick's, Rally Foundation, Team Bright Side, US Department of the Interior, and others.</li>
-															<li>Contracted federal work to develop a core model for pediatric cancer to be used by the NCI's Childhood Cancer Data Initiative (CCDI) and the Biden Cancer Moonshot Initiative</li>
-															<li>Worked closely with the NCI EVS to on pediatric cancer CDEs in the cancer data standards registry (caDSR)</li>
-															<li>Managed a team of clinical data analysts and created a version-controlled metadata change management pipeline</li>
+															<li>Helping secure funding through several notable mechanisms and partners, such as: LLS, NCI, St. Baldrick's, Rally Foundation, Team Bright Side, US Department of the Interior, and others.</li>
+															<li>Contracted federal work to develop a core model for pediatric cancer to be used by the NCI's Childhood Cancer Data Initiative (CCDI) and the Biden Cancer Moonshot Initiative.</li>
+															<li>Working closely with the NCI EVS on pediatric cancer CDEs in the cancer data standards registry (caDSR).</li>
+															<li>Managing a team of clinical data analysts and creating a version-controlled metadata change management pipeline.</li>
 														</ul>
 														<header style="padding-top:30px">
                                 <h3 style="letter-spacing: normal;font-family: 'EB Garamond'; margin-bottom:6px">Principal, STANDARDWISE LLC</h3>
