--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                                 <h3 style="letter-spacing: normal;font-family: 'EB Garamond'; margin-bottom:6px">Research Assistant, Department of Biomedical Informatics, University of Utah</h3>
                                 <p style="margin-bottom:9px">2017&ndash;2018</p>
                             </header>
-                            I spent this time supported by Dr. Karen Eilbeck, Ph.D., assisting in the maintenance of the Sequence Ontology, and developing tools to support our joint efforts on the GA4GH Variant Representation working group.
+                            I spent this time supported by Dr. Karen Eilbeck, PhD, assisting in the maintenance of the Sequence Ontology, and developing tools to support our joint efforts on the GA4GH Variant Representation working group.
                             <header style="padding-top:30px">
                                 <h3 style="letter-spacing: normal;font-family: 'EB Garamond'; margin-bottom:6px">Research Assistant, Department of Computer Science, Brigham Young University</h3>
                                 <p style="margin-bottom:9px">2016&ndash;2017</p>
                             </header>
-                            I spent this time supported by Dr. Mark Clement, Ph.D., using multi-GPU computing libraries to optimize machine learning algorithms designed to synthesize novel protein structures.
+                            I spent this time supported by Dr. Mark Clement, PhD, using multi-GPU computing libraries to optimize machine learning algorithms designed to synthesize novel protein structures.
 
 						</div>
 					</section>
