--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <h3 style="letter-spacing: normal;font-family: 'EB Garamond';margin-bottom:6px">2020 John D. Morgan Award</h3>
                                 <p style="margin-bottom:9px">University of Utah</p>
                             </header>
-                            This $5,000 cash award is given annually to recognize a Ph.D. candidate who has made a significant contribution to the biomedical informatics community.
+                            This $5,000 cash award is given annually to recognize a doctoral candidate who has made a significant contribution to the biomedical informatics community.
                         </div>
                     </section>
 
