--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 														2023-11-13, University of Chicago, D4CG Team Meeting, Virtual. 'Common Data Elements (CDEs).'
 														<br />2022-02-14, Univeristy of Chicago, PCDC Team Meeting, Virtual. 'Data Standards and Modeling, Strategic Overview.'
 														<br />2022-01-13, University of Chicago, PCDC SPPA Retreat, Chicago, IL. 'Knowledge Graphs and FHIR.'
-														<br />2017-2020, University of Utah, Department of Biomedical Informatics, Foundations of Bioinformatics, Salt Lake City, UT. 'Galaxy and Jupyter.'
+														<br />2017&ndash;2020, University of Utah, Department of Biomedical Informatics, Foundations of Bioinformatics, Salt Lake City, UT. 'Galaxy and Jupyter.'
                             <br />2020-10-22, University of Utah, Department of Biomedical Informatics, Ph.D. Seminar, Salt Lake City, UT. 'Clinical Quality Language (CQL).'
                             <br />2020-09-10, University of Utah, Department of Biomedical Informatics, Foundations of Bioinformatics, Salt Lake City, UT. 'Local and Global Sequence Alignment'
                             <br />2020-03-04, University of Utah, Department of Biomedical Informatics, FHIR Practicum, Salt Lake City, UT. 'SMART on FHIR with an ExpressJS and Docker framework.'
