--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 											</section>
 
 											<section id="skills" class="spotlight style1 orient-left content-align-left ">
-	                        <div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px" class="content">
+	                        <div style="margin-left:0;margin-right:0;width:100%;max-width:100%;padding-top:30px;padding-bottom:0px;" class="content">
 	                            <h2 style="letter-spacing: normal;font-family: 'EB Garamond';">Techincal Skills</h2>
 	                            <header>
 	                                <p style="margin-bottom:0">Back-End Programming</p>
