--- a/index.html
+++ b/index.html
@@ -632,6 +632,10 @@
 																<td style="padding-left:0px">2023</td>
 																<td style="padding-right:0px">Invited speaker, <i>“Genomic Alteration Modeling in Neuroblastoma”</i>, International Neuroblastoma Risk Group (INRG) Annual Meeting, Amsterdam, Netherlands</td>
 															</tr>
+															<tr>
+																<td style="padding-left:0px">2024</td>
+																<td style="padding-right:0px">Invited speaker, <i>“Developing Pediatric Cancer Data Standards”</i>, National Cancer Institute Childhood Cancer Data Initiative (CCDI) Webinar Series, Virtual</td>
+															</tr>
 														</table>
                         </div>
 											</section>
