--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
 					</section>
                     <section id="interests" style="display:none;">
-                        <div class="items style1 medium" style="background-image:linear-gradient(to bottom right, #FAFDFF, #FBFAFF); margin-bottom:0">
+                        <div class="items style1 medium" style="background-image:linear-gradient(to bottom right, #FAFDFF, #FBFAFF); margin-bottom:0; margin-top:0px">
                             <section>
                                 <div style="text-align:center">
                                     <span style="display:inline-block;"class="icon solid style2 major fa-dna"></span> + <span style="display:inline-block;"class="icon solid style2 major fa-home"></span>
@@ -665,7 +665,7 @@
                             <ul class="actions stacked align-center">
                                 <li><a href="#" class="button big wide">Return to Top</a></li>
                             </ul>
-                            <i>last updated: 02/19/24</i>
+                            <i>last updated: 03/04/24</i>
 							<!--ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
