--- a/index.html
+++ b/index.html
@@ -636,6 +636,10 @@
 																<td style="padding-left:0px">2024</td>
 																<td style="padding-right:0px">Invited speaker, <i>“Developing Pediatric Cancer Data Standards”</i>, National Cancer Institute Childhood Cancer Data Initiative (CCDI) Webinar Series, Virtual</td>
 															</tr>
+															<tr>
+																<td style="padding-left:0px">2024</td>
+																<td style="padding-right:0px">Invited speaker, <i>“Pediatric Cancer Common Data Elements (CDEs)”</i>, North American Association of Central Cancer Registries (NAACCR) Site-Specific Data Item (SSDI) Working Group Meeting, Virtual</td>
+															</tr>
 														</table>
                         </div>
 											</section>
@@ -655,7 +659,8 @@
 													<p class="publication">Carlson B, Watkins M, Li M, Furner B, Cohen E, Volchenboum S. (2023) Using A Standardized Nomenclature to Semantically Map Oncology-Related Concepts from Common Data Models to a Pediatric Cancer Data Model. AMIA Annu Symp Proc. ; 2023: 874–883.</p>
 													<p class="publication">Furner B, Cheng A, Desai A, Benedetti D, Friedman D, Wyatt K, Watkins M, Volchenboum S, Cohn S. (2024) Extracting Electronic Health Record Neuroblastoma Treatment Data with High Fidelity Using the REDCap Clinical Data Interoperability Services Module. JCO Clinical Cancer Informatics. Submitted Jan 2024.</p>
 													<p class="publication">Wyatt K, Birz S, Castellino S, Henderson T, Lucas J, Pei Q, Zhou Y, Volchenboum S, Furner B, Watkins M, Kelly K, Flerlage J. (2024) Accelerating pediatric Hodgkin lymphoma research: the Hodgkin lymphoma data collaboration (NODAL). Journal of the National Cancer Institute. 2024;, djae013.</p>
-                        </div>
+													<p class="publication">Watkins M, Christensen E, Eilbeck K (2024) Categorizing Genomic Concepts from Clinical and Research Terminologies Commonly Used in Cancer Reporting. AMIA Annu Symp Proc. 2024; Submitted Mar 2024.</p>
+												</div>
 											</section>
 
 				<!-- Footer -->
@@ -665,7 +670,7 @@
                             <ul class="actions stacked align-center">
                                 <li><a href="#" class="button big wide">Return to Top</a></li>
                             </ul>
-                            <i>last updated: 03/04/24</i>
+                            <i>last updated: 04/02/24</i>
 							<!--ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
